kubernetes/apps/immich/pet-tagger/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-pet-tagger
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-pet-tagger
  ports:
    - name: http
      port: 8000
      targetPort: http
